package org.solucion;

public interface SistemaAtaque {

    void atacarA(Nave nave);

    int calcularPuntaje();
}
