package org.solucion;

public interface SistemaDefensa {
    void recibirDisparo(int danio);

    int calcularPuntaje(int puntajeAtaque);
}
